--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,9 @@
 .body {
-    font-family: "Roboto";
+    font-family: "Roboto" sans-serif;
     font-size: 16px;
     font-weight: "Regular";
     line-height: 1.5;
     letter-spacing: 2%;
-    background-color: #F4F4FD;
+    color: #434445;
+    background-color: #ffffff;
 }
