--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@
 }
 
 .main-button {
-    background-color: #404BBF
+    background-color: #404BBF;
     color: #FFF;
     font-family: "Roboto", sans-serif;
     font-size: 16px;
