--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@
 }
 
 .main-button {
-    background-color: #404BBF;
+    background-color: #4d5ae5;
     color: #FFF;
     font-family: "Roboto", sans-serif;
     font-size: 16px;
