--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
     background-color: #ffffff;
 }
 
-.header {
+.header-nav {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
