--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,13 @@
 }
 /* Section two */
 
+.description {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
 
 /* Section three */
 
