--- a/css/styles.css
+++ b/css/styles.css
@@ -105,13 +105,37 @@
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02;
+    background: var(--CLOUD, #F4F4FD);
 
 }
 
+.card-name {
+    color: var(--NAVY-BLUE, #2E2F42);
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.4px;
+}
+
+.card-outline {
+    color: var(--SLATE, #434455);
+text-align: center;
+font-family: "Roboto", sans-serif;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0.32px;
+}
 
 /* Section four */
 
+.our-portfolio {
 
+}
 
 /* Footer */
 
