--- a/css/styles.css
+++ b/css/styles.css
@@ -99,13 +99,13 @@
 /* Section three */
 
 .our-team {
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
     color: #2e2f42;
-    background: #F4F4FD;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02;
-    background: var(--CLOUD, #F4F4FD);
+    background-color: #F4F4FD;
 
 }
 
