--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    color: #4d5ae5;
 
 }
 
@@ -47,8 +48,8 @@
     letter-spacing: 0.02em; 
 }
 
-.header-list:hover,
-.header-list:focus {
+.header-list-item a:hover,
+.header-list-item a:focus {
     background-color: #404BBF
 }
 
