--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,10 @@
 
 }
 
+.header-list-item:hover {
+    color: #404bbf;
+}
+
 .header-text {
     color: #2e2f42;
 }
@@ -53,6 +57,7 @@
     background-color: #404BBF
 }
 
+
 .header-list-contacts {
     color: #434455;
     font-family: "Roboto", sans-serif;
@@ -60,11 +65,11 @@
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
-    letter-spacing: 0.32px;
+    letter-spacing: 0.02em;
 }
 
-.header-list-contacts:hover,
-.header-list-contacts:focus {
+.header-list-contacts a:hover,
+.header-list-contacts a:focus {
     background-color: #404BBF
 }
 
