--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,26 @@
     color: #2e2f42;
 }
 
+.description-subtitle {
+    color: #2E2F42;
+    font-family: "Roboto", sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+}
+
+.description-item {
+    color: #434455;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.03em;
+}
+
 /* Section three */
 
 .members-title {
