--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,10 @@
 
 /* Section three */
 
+.members {
+    background-color: #F4F4FD;
+}
+
 .members-title {
     font-size: 36px;
     line-height: 1.11;
@@ -148,6 +152,10 @@
     color: #2e2f42;
     background-color: #F4F4FD;
 
+}
+
+.members-item {
+    background-color: #FFFFFF;
 }
 
 .card-subtitle {
