--- a/css/styles.css
+++ b/css/styles.css
@@ -223,7 +223,7 @@ background: #FFF;
     font-style: normal;
     font-weight: 500;
     line-height: 1.2;
-    letter-spacing: 0.4px;
+    letter-spacing: 0.02em;
 }
 
 .portfolio-text {
@@ -233,7 +233,7 @@ background: #FFF;
     font-style: normal;
     font-weight: 400;
     line-height: 1.5;
-    letter-spacing: 0.32px;
+    letter-spacing: 0.02em;
 }
 
 /* Footer */
