--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,15 @@
     background-color: #ffffff;
 }
 
+.logo-link {
+    
+}
+
+.logo-link:hover,
+.logo-link:focus {
+    color: #404BBF;
+}
+
 .header-nav {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -30,10 +39,6 @@
 
 }
 
-.header-menu-link:hover,
-.header-menu-link:focus {
-    color: #404BBF;
-}
 
 .header-list-item:hover {
     color: #404bbf;
