--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,18 @@
     color: #4d5ae5;
 }
 
+.header-menu-link {
+    font-family: "Raleway", sans-serify;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+
+}
+
 .header-span {
     color: #2e2f42;
 }
