--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,7 @@
 
 .header-list-contacts:hover,
 .header-list-contacts:focus {
-    background-color: #404BBF
+    color: #404BBF
 }
 
 .header-address {
