--- a/css/styles.css
+++ b/css/styles.css
@@ -21,19 +21,6 @@
 }
 
 
-.logo-link {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-}
-
-.logo-link:hover,
-.logo-link:focus {
-    color: #404BBF;
-}
-
 .header-span {
     color: #2e2f42;
 }
@@ -49,6 +36,11 @@
     text-transform: uppercase;
     color: #4d5ae5;
 
+}
+
+.header-menu-link:hover,
+.header-menu-link:focus {
+    color: #404BBF;
 }
 
 .header-list-item {
