--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
 .body {
     font-family: "Roboto", sans-serif;
     font-size: 16px;
-    font-weight: "Regular";
+    font-weight: 400;
     line-height: 1.5;
-    letter-spacing: 2%;
+    letter-spacing: 0.02em;
     color: #434455;
     background-color: #ffffff;
 }
@@ -99,7 +99,7 @@
     font-style: normal;
     font-weight: 700;
     line-height: 1.07;
-    letter-spacing: 1.12px;
+    letter-spacing: 0.03em;
 }
 
 .main-button {
@@ -110,7 +110,7 @@
     font-style: normal;
     font-weight: 500;
     line-height: 24px;
-    letter-spacing: 0.64px;
+    letter-spacing: 0.02em;
     cursor: pointer;
 }
 
@@ -171,25 +171,25 @@
 }
 
 .card-subtitle {
-    color: var(--NAVY-BLUE, #2E2F42);
+    color: var#2E2F42;
     text-align: center;
     font-family: "Roboto", sans-serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 500;
     line-height: 24px;
-    letter-spacing: 0.4px;
+    letter-spacing: 0.02em;
 }
 
 .card-item {
-    color: var(--SLATE, #434455);
+    color: #434455;
 text-align: center;
 font-family: "Roboto", sans-serif;
 font-size: 16px;
 font-style: normal;
 font-weight: 400;
 line-height: 24px;
-letter-spacing: 0.32px;
+letter-spacing: 0.02em;
 }
 
 /* Section four */
@@ -211,7 +211,7 @@ letter-spacing: 0.32px;
     font-style: normal;
     font-weight: 700;
     line-height: 1.11;
-    letter-spacing: 0.72px;
+    letter-spacing: 0.03em;
     text-transform: capitalize;
 }
 
