--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@
     color: #404BBF;
 }
 
-.header-list-item {
+.index {
     color: #2e2f42;
     font-family: "Roboto", sans-serif;
     font-size: 16px;
@@ -53,8 +53,8 @@
     letter-spacing: 0.02em; 
 }
 
-.header-list-item:hover,
-.header-list-item:focus {
+.index:hover,
+.index:focus {
     color: #404BBF;
 }
 
