--- a/css/styles.css
+++ b/css/styles.css
@@ -73,15 +73,16 @@
     color: #404BBF
 }
 
-.header-address {
+
+.address {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
 }
 
-.header-address:hover,
-.header-address:focus {
+.address:hover,
+.address:focus {
     color: #404bbf;
 }
 
