--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,6 @@
 }
 
 .card-subtitle {
-    color: var#2E2F42;
     text-align: center;
     font-family: "Roboto", sans-serif;
     font-size: 20px;
@@ -180,6 +179,7 @@
     font-weight: 500;
     line-height: 24px;
     letter-spacing: 0.02em;
+    color: #2e2f42;
 }
 
 .card-item {
