--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@
 
 
 .header-menu-link {
-    font-family: "Raleway", sans-serify;
+    font-family: "Raleway", sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 700;
